fit_predictor/cvrp_lehd/evaluates/run6/2025-01-26_14-18-36/problem_iter19_response12.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 6, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 16
    penalty\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd = (distance_matrix < distance_matrix[:, 0].mean() + 0.1).float() * -500
            ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xbd in position 7: invalid start byte

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2/problems/cvrp_lehd/eval.py", line 15, in <module>
    from VRPTester import VRPTester as Tester
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPTester.py", line 4, in <module>
    from VRPModel import VRPModel as Model
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 8, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 16
    penalty\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd = (distance_matrix < distance_matrix[:, 0].mean() + 0.1).float() * -500
            ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xbd in position 7: invalid start byte
